// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<modal-mock>
  <aside>
    <form
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        disabled={false}
        onClick={[MockFunction]}
        type="reset"
      />
      <div>
        <div>
          <span>
            Edit Shipping Method
          </span>
          <button
            disabled={false}
            onClick={[MockFunction]}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div>
          <div>
            <div
              className="root"
            >
              <label
                className="root"
              >
                <input
                  checked={true}
                  className="input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="radio"
                  value="flatrate|flatrate"
                />
                <span
                  className="label"
                >
                  <span>
                    Flat Rate
                  </span>
                  <div
                    className="price"
                  >
                    <div />
                  </div>
                </span>
              </label>
            </div>
            <p
              className="root"
            />
          </div>
          <div>
            <button
              className="root_normalPriority"
              disabled={false}
              onClick={[MockFunction]}
              type="reset"
            >
              <span
                className="content"
              >
                Cancel
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              type="submit"
            >
              <span
                className="content"
              >
                Update
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</modal-mock>
`;

exports[`it renders correctly during loading 1`] = `
<modal-mock>
  <aside>
    <form
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        disabled={true}
        onClick={[MockFunction]}
        type="reset"
      />
      <div>
        <div>
          <span>
            Edit Shipping Method
          </span>
          <button
            disabled={true}
            onClick={[MockFunction]}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height="24"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div>
          <div>
            <div
              className="root"
            >
              <span
                className="root"
              >
                <svg
                  className="icon"
                  fill="none"
                  height={64}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={64}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="2"
                    y2="6"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="18"
                    y2="22"
                  />
                  <line
                    x1="4.93"
                    x2="7.76"
                    y1="4.93"
                    y2="7.76"
                  />
                  <line
                    x1="16.24"
                    x2="19.07"
                    y1="16.24"
                    y2="19.07"
                  />
                  <line
                    x1="2"
                    x2="6"
                    y1="12"
                    y2="12"
                  />
                  <line
                    x1="18"
                    x2="22"
                    y1="12"
                    y2="12"
                  />
                  <line
                    x1="4.93"
                    x2="7.76"
                    y1="19.07"
                    y2="16.24"
                  />
                  <line
                    x1="16.24"
                    x2="19.07"
                    y1="7.76"
                    y2="4.93"
                  />
                </svg>
              </span>
              <span
                className="message"
              >
                Loading shipping methods...
              </span>
            </div>
          </div>
          <div>
            <button
              className="root_normalPriority"
              disabled={true}
              onClick={[MockFunction]}
              type="reset"
            >
              <span
                className="content"
              >
                Cancel
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={true}
              type="submit"
            >
              <span
                className="content"
              >
                Update
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</modal-mock>
`;
